[package]
name = "p2psync"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = false

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# File monitoring dependencies
notify = "6.0"
md5 = "0.7"
walkdir = "2.0"
rayon = "1.11.0"
syn = "2.0.106"
axum = "0.8.4"
tower-http = "0.6.6"
tokio-util = "0.7.16"
tqdm = "0.8.0"
serde-binary = "0.5.0"
tokio-context = "0.1.3"
reqwest = { version = "0.12.23", features = ["json"] }
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.0"
